# AtCoder

./: .clang-format  .dir-locales.el  .dir-locals.el  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.in  README.html  README.md  README.org  README.txt  TEMPLATE.PL  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  lib.hpp  main.cpp  mint.hpp  template.cpp  template.org  util.hpp  utils.cpp  version.cpp
.devcontainer/: Dockerfile  devcontainer.json
.template/: CMakeLists.txt  main.cpp
.template/bits/: stdc++.h
a/: .gitignore  Makefile  main.cpp
abc/: .gitignore  CMakeLists.txt  f.cpp
b/: .gitignore  Makefile  main.cpp
bits/: stdc++.h
c/: .gitignore  main.cpp
d/: .gitignore  Makefile  compile_commands.json  main.cpp
template/: main.cpp
templates/: combi.cpp  gcd.cpp  main.cpp  mint.cpp
utils/: template.cpp  version.cpp
z/: .gitignore  Makefile  main.cpp
