# CMakeLists.txt

cmake_minimum_required(VERSION 3.1)

find_program(CLANG_C_EXECUTABLE clang)
find_program(CLANG_CXX_EXECUTABLE clang++)
if(CLANG_C_EXECUTABLE AND CLANG_CXX_EXECUTABLE)
  set(CMAKE_C_COMPILER ${CLANG_C_EXECUTABLE})
  set(CMAKE_CXX_COMPILER ${CLANG_CXX_EXECUTABLE})
endif()

enable_language(CXX)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
add_executable(main main.cpp)
